[package]
name = "binator_utils"
authors = ["Stargateur"]
version = "0.0.0"
description = "This contains utils combinator for binator"
license = "Zlib"
repository = "https://github.com/binator/utils"
readme = "readme.md"
keywords = ["parsing", "combinator", "utils"]
categories = ["parsing"]
edition = "2021"

include = [
  "readme.md",
  "license.md",
  "Cargo.toml",
  "rustfmt.toml",
  "src/**/*.rs",
]

[dependencies.binator_core]
version = "0.0.2"
default-features = false

[dependencies.tracing]
version = "0.1"
optional = true
# default-features = false

[dev-dependencies]
binator_core = { version = "0.0.2", features = ["tracing"]}
binator_base = { git = "https://github.com/binator/base.git", features = ["tracing"] }
binator_context = { git = "https://github.com/binator/context.git", features = ["tracing"] }

derive-new = "0.5"
derive_more = "0.99"